// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-left: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialStepIndex 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-right: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Deuxieme Etape 
        <button>
          Submit
        </button>
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
        type="button"
      >
        Précédent
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-left: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          3
        </span>
        Name
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should inject rules component 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-left: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <p>
      Rule
    </p>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Suivant 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-right: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Deuxieme Etape 
        <button>
          Submit
        </button>
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
        type="button"
      >
        Précédent
      </button>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):active,
.c8:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c0 {
  border-bottom: 1px solid #adb9c9;
  margin-top: 1.25rem;
  padding-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 8.4375rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  color: #adb9c9;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  line-height: 1;
}

.c2 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
}

.c4 {
  border-radius: 49%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.6rem;
  width: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
}

.c7 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-left: auto;
}

.c6 {
  margin: 2rem 0;
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <form>
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        <span
          class="c2"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <p>
        Premiere Etape
      </p>
    </div>
    <div
      class="c5 c7"
    >
      <button
        class="c8 c9"
      >
        Suivant
      </button>
    </div>
  </form>
</div>
`;
